--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ scikit-learn = "1.2.2"
 graphviz = "0.20.3"
 lightgbm = "4.1.0"
 jupyterlab = "4.1.5"
+shap = "0.41.0"
+xgboost = "2.0.3"
+optuna = "3.1.1"
 
 
 [build-system]
