--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.2 ; python_full_version == "3.10.12"
 anyio==4.4.0 ; python_full_version == "3.10.12"
 appnope==0.1.4 ; platform_system == "Darwin" and python_full_version == "3.10.12"
 argon2-cffi-bindings==21.2.0 ; python_full_version == "3.10.12"
@@ -9,28 +10,32 @@ attrs==23.2.0 ; python_full_version == "3.10.12"
 babel==2.15.0 ; python_full_version == "3.10.12"
 beautifulsoup4==4.12.3 ; python_full_version == "3.10.12"
 bleach==6.1.0 ; python_full_version == "3.10.12"
-certifi==2024.6.2 ; python_full_version == "3.10.12"
+certifi==2024.7.4 ; python_full_version == "3.10.12"
 cffi==1.16.0 ; python_full_version == "3.10.12"
 charset-normalizer==3.3.2 ; python_full_version == "3.10.12"
-colorama==0.4.6 ; python_full_version == "3.10.12" and sys_platform == "win32"
+cloudpickle==3.0.0 ; python_full_version == "3.10.12"
+cmaes==0.10.0 ; python_full_version == "3.10.12"
+colorama==0.4.6 ; python_full_version == "3.10.12" and (platform_system == "Windows" or sys_platform == "win32")
+colorlog==6.8.2 ; python_full_version == "3.10.12"
 comm==0.2.2 ; python_full_version == "3.10.12"
 contourpy==1.2.1 ; python_full_version == "3.10.12"
 cycler==0.12.1 ; python_full_version == "3.10.12"
-debugpy==1.8.1 ; python_full_version == "3.10.12"
+debugpy==1.8.2 ; python_full_version == "3.10.12"
 decorator==5.1.1 ; python_full_version == "3.10.12"
 defusedxml==0.7.1 ; python_full_version == "3.10.12"
 exceptiongroup==1.2.1 ; python_full_version == "3.10.12"
 executing==2.0.1 ; python_full_version == "3.10.12"
 fastjsonschema==2.20.0 ; python_full_version == "3.10.12"
-fonttools==4.53.0 ; python_full_version == "3.10.12"
+fonttools==4.53.1 ; python_full_version == "3.10.12"
 fqdn==1.5.1 ; python_full_version == "3.10.12"
 graphviz==0.20.3 ; python_full_version == "3.10.12"
+greenlet==3.0.3 ; python_full_version == "3.10.12" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 h11==0.14.0 ; python_full_version == "3.10.12"
 httpcore==1.0.5 ; python_full_version == "3.10.12"
 httpx==0.27.0 ; python_full_version == "3.10.12"
 idna==3.7 ; python_full_version == "3.10.12"
-ipykernel==6.29.4 ; python_full_version == "3.10.12"
-ipython==8.25.0 ; python_full_version == "3.10.12"
+ipykernel==6.29.5 ; python_full_version == "3.10.12"
+ipython==8.26.0 ; python_full_version == "3.10.12"
 isoduration==20.11.0 ; python_full_version == "3.10.12"
 jedi==0.19.1 ; python_full_version == "3.10.12"
 jinja2==3.1.4 ; python_full_version == "3.10.12"
@@ -38,8 +43,8 @@ joblib==1.4.2 ; python_full_version == "3.10.12"
 json5==0.9.25 ; python_full_version == "3.10.12"
 jsonpointer==3.0.0 ; python_full_version == "3.10.12"
 jsonschema-specifications==2023.12.1 ; python_full_version == "3.10.12"
-jsonschema==4.22.0 ; python_full_version == "3.10.12"
-jsonschema[format-nongpl]==4.22.0 ; python_full_version == "3.10.12"
+jsonschema==4.23.0 ; python_full_version == "3.10.12"
+jsonschema[format-nongpl]==4.23.0 ; python_full_version == "3.10.12"
 jupyter-client==8.6.2 ; python_full_version == "3.10.12"
 jupyter-core==5.7.2 ; python_full_version == "3.10.12"
 jupyter-events==0.10.0 ; python_full_version == "3.10.12"
@@ -51,6 +56,8 @@ jupyterlab-server==2.27.2 ; python_full_version == "3.10.12"
 jupyterlab==4.1.5 ; python_full_version == "3.10.12"
 kiwisolver==1.4.5 ; python_full_version == "3.10.12"
 lightgbm==4.1.0 ; python_full_version == "3.10.12"
+llvmlite==0.43.0 ; python_full_version == "3.10.12"
+mako==1.3.5 ; python_full_version == "3.10.12"
 markupsafe==2.1.5 ; python_full_version == "3.10.12"
 matplotlib-inline==0.1.7 ; python_full_version == "3.10.12"
 matplotlib==3.7.1 ; python_full_version == "3.10.12"
@@ -60,14 +67,16 @@ nbconvert==7.16.4 ; python_full_version == "3.10.12"
 nbformat==5.10.4 ; python_full_version == "3.10.12"
 nest-asyncio==1.6.0 ; python_full_version == "3.10.12"
 notebook-shim==0.2.4 ; python_full_version == "3.10.12"
+numba==0.60.0 ; python_full_version == "3.10.12"
 numpy==1.25.2 ; python_full_version == "3.10.12"
+optuna==3.1.1 ; python_full_version == "3.10.12"
 overrides==7.7.0 ; python_full_version == "3.10.12"
 packaging==24.1 ; python_full_version == "3.10.12"
 pandas==2.0.3 ; python_full_version == "3.10.12"
 pandocfilters==1.5.1 ; python_full_version == "3.10.12"
 parso==0.8.4 ; python_full_version == "3.10.12"
 pexpect==4.9.0 ; (sys_platform != "win32" and sys_platform != "emscripten") and python_full_version == "3.10.12"
-pillow==10.3.0 ; python_full_version == "3.10.12"
+pillow==10.4.0 ; python_full_version == "3.10.12"
 platformdirs==4.2.2 ; python_full_version == "3.10.12"
 prometheus-client==0.20.0 ; python_full_version == "3.10.12"
 prompt-toolkit==3.0.47 ; python_full_version == "3.10.12"
@@ -88,20 +97,24 @@ referencing==0.35.1 ; python_full_version == "3.10.12"
 requests==2.32.3 ; python_full_version == "3.10.12"
 rfc3339-validator==0.1.4 ; python_full_version == "3.10.12"
 rfc3986-validator==0.1.1 ; python_full_version == "3.10.12"
-rpds-py==0.18.1 ; python_full_version == "3.10.12"
+rpds-py==0.19.0 ; python_full_version == "3.10.12"
 scikit-learn==1.2.2 ; python_full_version == "3.10.12"
-scipy==1.13.1 ; python_full_version == "3.10.12"
+scipy==1.14.0 ; python_full_version == "3.10.12"
 seaborn==0.13.1 ; python_full_version == "3.10.12"
 send2trash==1.8.3 ; python_full_version == "3.10.12"
+shap==0.41.0 ; python_full_version == "3.10.12"
 six==1.16.0 ; python_full_version == "3.10.12"
+slicer==0.0.7 ; python_full_version == "3.10.12"
 sniffio==1.3.1 ; python_full_version == "3.10.12"
 soupsieve==2.5 ; python_full_version == "3.10.12"
+sqlalchemy==2.0.31 ; python_full_version == "3.10.12"
 stack-data==0.6.3 ; python_full_version == "3.10.12"
 terminado==0.18.1 ; python_full_version == "3.10.12"
 threadpoolctl==3.5.0 ; python_full_version == "3.10.12"
 tinycss2==1.3.0 ; python_full_version == "3.10.12"
 tomli==2.0.1 ; python_full_version == "3.10.12"
 tornado==6.4.1 ; python_full_version == "3.10.12"
+tqdm==4.66.4 ; python_full_version == "3.10.12"
 traitlets==5.14.3 ; python_full_version == "3.10.12"
 types-python-dateutil==2.9.0.20240316 ; python_full_version == "3.10.12"
 typing-extensions==4.12.2 ; python_full_version == "3.10.12"
@@ -112,3 +125,4 @@ wcwidth==0.2.13 ; python_full_version == "3.10.12"
 webcolors==24.6.0 ; python_full_version == "3.10.12"
 webencodings==0.5.1 ; python_full_version == "3.10.12"
 websocket-client==1.8.0 ; python_full_version == "3.10.12"
+xgboost==2.0.3 ; python_full_version == "3.10.12"
