--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ cycler==0.12.1 ; python_full_version == "3.10.12"
 debugpy==1.8.2 ; python_full_version == "3.10.12"
 decorator==5.1.1 ; python_full_version == "3.10.12"
 defusedxml==0.7.1 ; python_full_version == "3.10.12"
-exceptiongroup==1.2.1 ; python_full_version == "3.10.12"
+exceptiongroup==1.2.2 ; python_full_version == "3.10.12"
 executing==2.0.1 ; python_full_version == "3.10.12"
 fastjsonschema==2.20.0 ; python_full_version == "3.10.12"
 fonttools==4.53.1 ; python_full_version == "3.10.12"
@@ -37,6 +37,7 @@ idna==3.7 ; python_full_version == "3.10.12"
 ipykernel==6.29.5 ; python_full_version == "3.10.12"
 ipython==8.26.0 ; python_full_version == "3.10.12"
 isoduration==20.11.0 ; python_full_version == "3.10.12"
+japanize-matplotlib==1.1.3 ; python_full_version == "3.10.12"
 jedi==0.19.1 ; python_full_version == "3.10.12"
 jinja2==3.1.4 ; python_full_version == "3.10.12"
 joblib==1.4.2 ; python_full_version == "3.10.12"
@@ -50,7 +51,7 @@ jupyter-core==5.7.2 ; python_full_version == "3.10.12"
 jupyter-events==0.10.0 ; python_full_version == "3.10.12"
 jupyter-lsp==2.2.5 ; python_full_version == "3.10.12"
 jupyter-server-terminals==0.5.3 ; python_full_version == "3.10.12"
-jupyter-server==2.14.1 ; python_full_version == "3.10.12"
+jupyter-server==2.14.2 ; python_full_version == "3.10.12"
 jupyterlab-pygments==0.3.0 ; python_full_version == "3.10.12"
 jupyterlab-server==2.27.2 ; python_full_version == "3.10.12"
 jupyterlab==4.1.5 ; python_full_version == "3.10.12"
